fixe navBar spacing

--- a/src/Components/Groups/GroupList.css
+++ b/src/Components/Groups/GroupList.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
-    padding: 20px;
     justify-content: center;
 }
 
