--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -7,7 +7,6 @@
     align-items: flex-start;
     height: 100vh;
     width: 100%;
-    padding-top: 80px;
     background-color: #f5e6ca; /* Aged paper color */
     box-sizing: border-box;
 }
